# 3S2R-NMR

./: .gitignore  pyproject.toml  setup.py
solventspinsim/: main.py
solventspinsim/file/: file_manager.py  load.py  nmr.py  spin.py
solventspinsim/parse/: __init__.py  parser.py  settings.py
solventspinsim/simulate/: __init__.py  simulate.py
solventspinsim/spin/: __init__.py  peak.py  spin.py
solventspinsim/theme/: themes.py
solventspinsim/ui/: __init__.py  gui.py
solventspinsim/ui/components/: component.py  container.py  input.py  menu.py  plot.py
solventspinsim/ui/fonts/: font_handler.py
tests/: test_gui_spin_selection.py
